5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3555/executions/1861_1292.log
== TEST (2019-06-26 18:03:57) 
-- CODE:
from numpy import *
from numpy.linalg import *


m = array(eval(input())) 
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:07:58) 
-- CODE:
from numpy import *
from numpy.linalg import *


m = array(eval(input())) 
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:36:36) 
-- CODE:
from numpy import *
from numpy.linalg import *


m = array(eval(input())) 
f=m.shape()
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:37:06) 
-- CODE:
from numpy import *
from numpy.linalg import *


m = array(eval(input())) 
f= m.shape()[]
print(f)
-- ERROR:
File "XXXX", line 6
    f= m.shape()[]
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:37:28) 
-- CODE:
from numpy import *
from numpy.linalg import *


m = array(eval(input())) 
f= m.shape()
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:37:42) 
-- CODE:
from numpy import *
from numpy.linalg import *


m = array(eval(input())) 
print(m)
f= m.shape()
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:38:18) 
-- CODE:
from numpy import *
from numpy.linalg import *


m = array(eval(input())) 
print(m)
f= shape(m)
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:40:07) 
-- CODE:
from numpy import *
from numpy.linalg import *


m = array(eval(input())) 
print(m)
l= shape(m)[0]
c= shape(m)[1]
print("linha = "l, "coluna = ",c)
-- ERROR:
File "XXXX", line 9
    print("linha = "l, "coluna = ",c)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:40:26) 
-- CODE:
from numpy import *
from numpy.linalg import *


m = array(eval(input())) 
print(m)
l= shape(m)[0]
c= shape(m)[1]
print("linha = ",l "coluna = ",c)
-- ERROR:
File "XXXX", line 9
    print("linha = ",l "coluna = ",c)
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:40:49) 
-- CODE:
from numpy import *
from numpy.linalg import *


m = array(eval(input())) 
print(m)
l= shape(m)[0]
c= shape(m)[1]
print("linha = ",l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:41:41) 
-- CODE:
from numpy import *
from numpy.linalg import *


m = array(eval(input())) 
print(m)
l= shape(m)[0]
c= shape(m)[1]
print("linha = ",l)
print("coluna =",c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
